--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/kielkow/Shopping-list/issues"
   },
-  "homepage": "https://github.com/kielkow/Shopping-list#readme"
+  "homepage": "https://github.com/kielkow/Shopping-list#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
+    "express": "^4.17.1",
+    "node": "^12.8.0",
+    "nodemon": "^1.19.1"
+  }
 }
