--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Purchase Control API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js --ignore *.marko.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,9 @@
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
-    "node": "^12.8.0",
+    "node": "^12.8.0"
+  },
+  "devDependencies": {
     "nodemon": "^1.19.1"
   }
 }
