--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
+    "marko": "^4.18.11",
     "node": "^12.8.0"
   },
   "devDependencies": {
