--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "homepage": "https://github.com/kielkow/Shopping-list#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cluster": "^0.7.7",
     "consign": "^0.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "marko": "^4.18.11",
-    "node": "^12.8.0"
+    "mysql": "^2.17.1",
+    "node": "^12.8.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
